# llmmanus-py

./: README.md  deepseek2.py  main.py  pyproject.toml  run.sh
api/: config.yaml  mcp-client-demo.py  mcp-server-demo.py  pyproject.toml  run.sh
api/app/: __init__.py  main.py
api/app/application/: __init__.py
api/app/application/errors/: exception.py
api/app/application/services/: agent_service.py  app_config_service.py  file_service.py  session_service.py  status_service.py
api/app/domain/: agent_task_runner.py
api/app/domain/models/: app_config.py  event.py  file.py  memory.py  message.py  plan.py  search.py  session.py  tool_result.py
api/app/domain/repositories/: app_config_repository.py  file_repository.py  session_repository.py  uow.py
api/app/domain/services/: agent_task_runner.py
api/app/domain/services/agents/: base.py  planner.py  react.py
api/app/domain/services/flows/: __init__.py  base.py  planner_react.py
api/app/domain/services/prompts/: __init__.py  (+3 more)
api/app/infrastructure/logging/: __init__.py  logging.py
api/app/infrastructure/models/: __init__.py  file.py  session.py  sql
api/app/infrastructure/repositories/: db_file_repository.py  db_session_repository.py  db_uow.py  file_app_config_repository.py
api/app/infrastructure/storage/: __init__.py  cos.py  mysql.py  redis.py
api/app/interfaces/: repository_dependencies.py  service_dependencies.py
api/app/interfaces/endpoints/: app_config_router.py  file_routes.py  file_toutes.py  routes.py  session_router.py
api/app/interfaces/errors/: exception_handlers.py
api/app/interfaces/schemas/: app_config.py  base.py  event.py  session.py
api/core/: config.py
(+66 files in other folders)
