[project]
name = "llmmanus-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"a2a-sdk>=1.0.2",
	"aiomysql>=0.3.2",
	"async-lru",
	"beautifulsoup4>=4.14.3",
	"browser-use>=0.11.1",
	"browser-use-sdk>=2.0.12",
	"cos-python-sdk-v5>=1.9.38",
	"docker>=7.1.0",
	"fastapi>=0.121.3",
	"filelock>=3.20.0",
	"greenlet>=3.2.4",
	"httpx>=0.28.1",
	"json-repair>=0.54.2",
	"markdownify>=1.2.2",
	"mcp>=1.22.0",
	"openai>=1.105.0",
	"playwright==1.57.0",
	"pydantic>=2.12.4",
	"pydantic-settings>=2.12.0",
	"python-dotenv>=1.2.1",
	"redis>=7.1.0",
	"requests>=2.32.5",
	"sqlalchemy>=2.0.44",
	"transformers>=4.57.1",
	"uvicorn[standard]>=0.38.0",
]
